# rsclaw

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE-MIT  README.md  README_cn.md  README_de.md  README_en.md  README_es.md  README_fr.md  README_ja.md  README_ko.md  README_ru.md  README_th.md  README_vi.md  README_zh.md  build.rs  check_cron.py  cron_out.txt  defaults.toml  fix_cron2.py  rustfmt.toml  switch-role.sh  test.sh  test2.sh  test_db.sh
.cargo/: audit.toml  config.toml
.claude/: settings.local.json  settings.local.json.bak
.claude/roles/: architect.md  backend-dev.md  backend-tester.md  design-reviewer.md  qa-lead.md  reviewer.md  switch-role.sh  ui-dev.md  ui-tester.md
.github/: dependabot.yml
.github/public-repo/: README.md
.github/workflows/: audit.yml  ci.yml  release-cli.yml  release-desktop.yml  release.yml
docs/: 2026-05-09-acp-tool-async-fix.md  ACP-IMPLEMENTATION-STATUS.md  ACP-PROTOCOL-SUMMARY.md  ROADMAP.md  client-server-integration.md  env-sync.md  plugin-development.md
docs/adr/: 2026-04-25-hot-reload-design.md  2026-05-05-computer-use-rewrite.md  2026-05-06-async-long-running-tools.md
docs/lang/: README.md  README_cn.md  README_de.md  README_es.md  README_fr.md  README_ja.md  README_ko.md  README_ru.md  README_th.md  README_vi.md  README_zh.md
docs/ui-specs/: three-pages-wireframes.md
examples/: default.rsclaw.json5  feishu-opencode.json5  opencode-feishu-config.json5  rsclaw.json5  telegram-codex.json5
proto/: openclaude.proto
scripts/: build-ui.ps1  build-ui.sh  build.ps1  build.sh  create-shortcut.ps1  fetch-bundled-model.mjs  fetch-bundled-model.sh  install.ps1  install.sh  orchestrator_zh.sh  parallel-feature.sh  rsclaw-probe-multiturn.sh  rsclaw-probe-watch.sh  rsclaw-tray.ps1
skills/douyin-download/: SKILL.md
skills/ecommerce-search/: SKILL.md
skills/jimeng/: SKILL.md
skills/web-scan-login/: SKILL.md
skills/web-video-download/: SKILL.md
src/: events.rs  i18n.rs  lib.rs  main.rs  sys.rs
src/a2a/: auth.rs  client.rs  errors.rs  event.rs  files.rs  mod.rs  push.rs  server.rs  store.rs  streaming.rs  types.rs  version.rs
src/acp/: client.rs  codex_client.rs  gateway_client.rs  jsonrpc.rs  mod.rs  notification.rs  openclaude_client.rs  opencode_client.rs  stream.rs  types.rs
src/agent/: bootstrap.rs  btw.rs  collaboration.rs  compaction.rs  context_mgr.rs  direct_apis.rs  doc.rs  evolution.rs  exec_pool.rs  install_hints.rs  loop_detection.rs  memory.rs  mod.rs  permission.rs  platform.rs  preparse.rs  prompt_builder.rs  query_planner.rs  registry.rs  runtime.rs  security.rs  sft_exporter.rs  spawner.rs  syntax_check.rs  tool_call_repair.rs  tools_acp.rs  tools_agent.rs  tools_artifact.rs  tools_builder.rs  tools_computer.rs  tools_cron.rs  tools_file.rs  tools_image.rs  tools_misc.rs  tools_session.rs  tools_session_archive.rs  tools_video.rs  tools_web.rs  trace_capture.rs  turn_metrics.rs  (+2 more)
src/artifact/: compact.rs  mod.rs  store.rs  text.rs
src/browser/: mod.rs  pool.rs
src/channel/: attachments.rs  chunker.rs  cli.rs  custom.rs  desktop.rs  dingtalk.rs  discord.rs  feishu.rs  line.rs  matrix.rs  mod.rs  qq.rs  signal.rs  slack.rs  telegram.rs  transcription.rs  tts.rs  wechat.rs  wecom.rs  whatsapp.rs  zalo.rs
src/cli/: acp.rs  agent_turn.rs  agents.rs  anycli.rs  approvals.rs  browser.rs  channels.rs  completion.rs  config.rs  cron.rs  daemon.rs  devices.rs  directory.rs  dns.rs  doctor.rs  env.rs  gateway.rs  hooks.rs  memory.rs  message.rs  migrate.rs  mod.rs  models.rs  ops.rs  plugins.rs  qr.rs  sandbox.rs  secrets.rs  security.rs  sessions.rs  setup.rs  skills.rs  system.rs  tools.rs  watch.rs  webhooks.rs
src/cmd/: agent_turn.rs  agents.rs  anycli.rs  approvals.rs  backup.rs  browser.rs  channels.rs  completion.rs  config.rs  config_json.rs  cron.rs  daemon.rs  dashboard.rs  debug.rs  devices.rs  directory.rs  dns.rs  docs.rs  doctor.rs  env.rs  gateway.rs  hooks.rs  memory.rs  message.rs  migrate.rs  mod.rs  models.rs  ops.rs  plugins.rs  qr.rs  reset.rs  sandbox.rs  secrets.rs  security.rs  sessions.rs  setup.rs  skills.rs  style.rs  system.rs  tools.rs  (+5 more)
src/computer/: action.rs  app_rules.rs  driver.rs  mod.rs  operator.rs  parser.rs  permission.rs  permission_ui.md  prompt.rs  status.rs
src/config/: env_file.rs  env_resolution.rs  loader.rs  mod.rs  runtime.rs  schema.rs  secrets.rs  validator.rs
src/cron/: mod.rs
src/gateway/: channels.rs  external_jobs.rs  external_jobs_worker.rs  hot_reload.rs  live_config.rs  mod.rs  preparse.rs  providers.rs  router.rs  session.rs  shutdown.rs  startup.rs  task_queue.rs
src/heartbeat/: meditation.rs  mod.rs  schedule.rs  state.rs
src/hooks/: mod.rs
src/mcp/: mod.rs
src/migrate/: mod.rs  openclaw.rs
src/plugin/: host_methods.rs  manifest.rs  mod.rs  shell_bridge.rs  slots.rs  wasm_runtime.rs
src/provider/: anthropic.rs  defaults.rs  failover.rs  gemini.rs  mod.rs  openai.rs  (+5 more)
tests/: a2a_e2e_runner.py  a2a_interop_python.md  a2a_v1_compliance.rs  acp_integration.rs  agent_turn.rs  baseline_2026_5_15.rs  baseline_2026_5_18.rs  baseline_2026_5_5.rs  channel_chunker.rs  channel_cli.rs  channel_custom.rs  channel_dingtalk.rs  channel_discord.rs  channel_feishu.rs  channel_line.rs  channel_manager.rs  channel_matrix.rs  channel_media.rs  channel_qq.rs  channel_send_retry.rs  channel_signal.rs  channel_slack.rs  channel_telegram.rs  channel_transcription.rs  channel_wechat.rs  channel_wecom.rs  channel_whatsapp.rs  channel_zalo.rs  computer_e2e.rs  config_validation.rs  cron_execution.rs  dm_policy.rs  failover_retry.rs  gateway_health.rs  heartbeat.rs  new_features.rs  organic_evolution.rs  provider_anthropic.rs  provider_gemini.rs  provider_mock.rs  (+15 more)
tools/: CLAUDE.md  init-worktrees.sh  lib.sh  parallel-channels.sh  review-pipeline.sh  switch-role.sh
ui/: .gitignore  README.md  jest.config.ts  package-lock.json  package.json
ui/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: main.rs  stream.rs
(+269 files in other folders)
