[package]
name = "rsclaw"
version = "2026.4.20"
edition = "2024"
rust-version = "1.91"
description = "AI Agent Engine Compatible with OpenClaw"
repository = "https://github.com/rsclaw-ai/rsclaw"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rsclaw"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio        = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Web framework
axum         = { version = "0.8", features = ["ws", "multipart"] }

# HTTP client
# TLS: use aws-lc-rs instead of ring for better cross-compilation (esp. Windows ARM64)
reqwest      = { version = "0.12", features = ["json", "stream", "multipart", "blocking", "rustls-tls-webpki-roots-no-provider", "socks"], default-features = false }
rustls       = { version = "0.23", default-features = false, features = ["aws_lc_rs", "logging", "std", "tls12"] }

# Storage
redb         = "2"
tantivy      = "0.22"

# HNSW vector index for memory search (replaced LanceDB to cut ~500 deps)
hnsw_rs    = "0.3"

# Local inference, BGE-Small embeddings (W8)
candle-core         = "0.9"
candle-nn           = "0.9"
candle-transformers = "0.9"

# Serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = { version = "1", features = ["preserve_order"] }
json5        = "0.4"
toml         = "1"

# Error handling
anyhow    = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive", "env"] }
dialoguer = "0.12"
ratatui = "0.28"
crossterm = "0.28"

# Utilities
uuid    = { version = "1", features = ["v4"] }
regex   = "1"
chrono  = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
rand          = "0.9"
which         = "7"
serde_yaml_ng = "0.10"
anycli = "0.1"
sys-info      = "0.9"
flate2        = "1"
tar           = "0.4"
md-5          = "0.10"
sha1          = "0.10"
sha2          = "0.10"
hmac          = "0.12"
hex           = "0.4"
dashmap = "6"
dirs-next = "2"
console = "0.16"
tempfile  = "3"
libc = "0.2"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"
bytes = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokenizers = "0.21"
qrcode = "0.14"
xz2 = "0.1"
zip = "2"
rust_xlsxwriter = "0.83"
calamine = "0.26"
docx-rs = "0.4"
genpdf = "0.2"
pdf-extract = "0.10"
base64 = "0.22"
aes = "0.8"
urlencoding = "2"
silk-rs = "0.2"
symphonia = { version = "0.5", features = ["mp3", "aac", "ogg", "flac", "wav", "pcm", "vorbis", "isomp4", "mkv"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
opus-decoder = "0.1"
ogg = "0.9"
lark-websocket-protobuf = "0.1"
prost = "0.13"
mime = "0.3"
matrix-sdk = { version = "0.9", optional = true, default-features = false, features = ["e2e-encryption", "rustls-tls", "sqlite"] }
fs2 = "0.4.3"
rusqlite = { version = "0.32", optional = true, features = ["bundled"] }
htmd = "0.5"
wasmtime = { version = "29", features = ["async"] }
wasmtime-wasi = "29"
moka = { version = "0.12", features = ["future"] }

# System tray (optional)
tray-icon = { version = "0.21", optional = true }
muda = { version = "0.16", optional = true }
bzip2 = "0.6.1"
lopdf = "0.34"
glob = "0.3.3"

[features]
default = ["openclaw-migrate"]
channel-matrix = ["dep:matrix-sdk"]
openclaw-migrate = ["rusqlite"]
tray = ["dep:tray-icon", "dep:muda"]

[profile.release]
lto = true
strip = true
codegen-units = 1

# Reduce stack usage in debug builds
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 0

[dev-dependencies]
tokio-test = "0.4"
tempfile   = "3"
wiremock = "0.6"
ctor = "0.4"
